--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,8 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="./favicon.png"/>
+
 
   <title>your_turn</title>
   <link rel="manifest" href="manifest.json">
